--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@artemisbot.net/eris",
+  "name": "eris",
   "version": "0.16.0-dev",
   "description": "A NodeJS Discord library",
   "main": "./index.js",
